--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Xiangkun Jia"
-description              : "I am now working as an Associate Professor in Purui Su's group of Institute of Software Chinese Academy of Sciences (ISCAS)."
+description              : "I am now an Associate Professor in Purui Su's group in Institute of Software Chinese Academy of Sciences (ISCAS)."
 repository               : "ajax4sec/ajax4sec.github.io"
 google_scholar_stats_use_cdn : true
 
