--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,5 +9,5 @@ main:
   - title: "Honors and Awards"
     url: "/#-honors-and-awards"
 
-  - title: "Professional Activities"
-    url: "/#-professional-activities"
+  - title: "Academic Services"
+    url: "/#-academic-services"
